
syntax = "proto3";

option go_package = "berty.tech/go/pkg/bertyprotocol";

message Device {
  bytes device_pub_key = 1;
  bytes account_pub_key = 2;
}

message SigChainEntry {}
message SigChain {
  repeated SigChainEntry entries = 1;
}

message Contact {
  enum ContactStatus {
    Unknown = 0;
    Myself = 1;
    Contact = 2;
    Trusted = 3;
    Blocked = 4;
    RequestIn = 5;
    RequestOut = 6;
  }

  // AccountID = sig_chain.entries[0].pub_key
  SigChain sig_chain = 1;
  bytes metadata = 2; // Display name, profile picture etc.
  bytes rendezvous_point_seed = 3;
  bytes shared_secret = 4;
  ContactStatus contact_status = 5;
}

message AccountConfig {
  bool rendezvous_point_enabled = 1;
}

message DeviceConfig {
  // ... net config
}
